--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ main {
 }
 
 .product-box {
+    background: #000000;
     width: 100%;
     height: auto;
     margin: 0;
@@ -81,7 +82,12 @@ main {
 
 .video-section {
     padding: 50px;
-    background: #f5f5f5;
+    background: #000000;
+}
+
+.logo {
+    width: 50%;
+    height: 50%;
 }
 
 @media (max-width: 768px) {
